<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="23sp"
            android:textColor="@color/white"
            android:background="@color/design_default_color_error"

            android:text="@string/pdf_gen" />

        <ImageButton
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="23dp"
            android:background="@drawable/logo"
            android:contentDescription="@string/company_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/userNameLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:textSize="18sp"
                android:text="@string/user_name" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:hint="@string/enter_user_name"
                android:ems="10"
                android:inputType="textPersonName"
                android:autofillHints="@string/enter_user_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/passwordLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:textSize="18sp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:hint="@string/enter_password"
                android:ems="10"
                android:autofillHints="@string/enter_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/boughtDateLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:textSize="18sp"
                android:text="@string/bought_date" />

            <EditText
                android:id="@+id/boughtDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:hint="@string/enter_bought_date"
                android:ems="10"
                android:inputType="date"
                android:autofillHints="@string/enter_bought_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/boughtItemLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:textSize="18sp"
                android:text="@string/bought_item" />

            <EditText
                android:id="@+id/boughtItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:hint="@string/enter_bought_item"
                android:ems="10"
                android:inputType="textPersonName"
                android:autofillHints="@string/enter_bought_item" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/companyLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:textSize="18sp"
                android:text="@string/company" />

            <EditText
                android:id="@+id/company"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:hint="@string/enter_company_name"
                android:ems="10"
                android:inputType="textPersonName"
                android:autofillHints="@string/enter_company_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateLbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:textSize="18sp"
                android:text="@string/date" />

            <EditText
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:hint="@string/enter_date"
                android:ems="10"
                android:inputType="datetime"
                android:autofillHints="@string/enter_date" />
        </LinearLayout>

        <Button
            android:id="@+id/signIN"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="100dp"
            android:text="@string/sign_in" />
    </LinearLayout>

</ScrollView>